--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
         node-version: [18.x,16.x, 14.x ]
 
         steps:
-          -uses: actions/checkou@v2
+          -uses: actions/checkout@v2
           -name: Use Node.js ${{matrix.node-version}}
           -uses: actions/setup-node@v1
           with:
@@ -18,3 +18,4 @@ jobs:
               -name: npm install
               run: npm ci
               -name: npm test
+              run: npm test
